k8s/apps/mazanoke/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mazanoke
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mazanoke
  namespace: mazanoke
  labels:
    app.kubernetes.io/name: mazanoke
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mazanoke
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mazanoke
    spec:
      containers:
        - name: mazanoke
          image: ghcr.io/civilblur/mazanoke:v1.1.7@sha256:ca83cddd90cd1e4b43102884bf39025731a1c7569f3bbda9d6530de72528cbab
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 5
            timeoutSeconds: 3
          resources:
            requests:
              memory: "32Mi"
              cpu: "25m"
            limits:
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: mazanoke
  namespace: mazanoke
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  selector:
    app.kubernetes.io/name: mazanoke
  ports:
    - port: 80
      targetPort: 80
      name: http
