k8s/apps/mazanoke/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mazanoke
  namespace: mazanoke
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Mazanoke"
    gethomepage.dev/description: "Simple online image compressor"
    gethomepage.dev/group: "tools"
    gethomepage.dev/icon: "sh-mazanoke.svg"
    gethomepage.dev/href: "https://mazanoke.item.fyi"
    gethomepage.dev/siteMonitor: "http://mazanoke.mazanoke.svc.cluster.local"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=mazanoke"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`mazanoke.item.fyi`)
      services:
        - name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
  tls: {}
